Fix PDP price box alignment
Fixes DD 78973 188

--- a/app/design/frontend/Travers/default/Magento_Catalog/styles/module/_product-hero.scss
+++ b/app/design/frontend/Travers/default/Magento_Catalog/styles/module/_product-hero.scss
@@ -100,6 +100,9 @@ $product-hero__button-and-catalog__width: 240px;
     }
 
     .product-info-price {
+        display: flex;
+        flex-direction: column;
+
         .manufacturer_price {
             margin-top: $indent__m;
             margin-bottom: 15px;
